<resources>
    <string name="app_name">Attendance management system</string>
    <string name="app_nav_name">Attendance management system</string>
    <string name="web_address">Attendance management system</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string-array name="hour">
        <item>Select Hour</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string-array name="blood_group">

        <item>Slect Blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>
    <string-array name="country">

        <item>India</item>
        <item>Other</item>

    </string-array>
    <string name="status">status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_d1l">title_activity_d1l</string>
    <string name="title_activity_scroll">title_activity_scroll</string>
    <string name="title_activity_login">title_activity_login</string>
    <string name="tab_text_1">CA</string>
    <string name="tab_text_2">ACCA</string>
    <string name="tab_text_3">CMA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="mobile">mobile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="intro_institution">Regional College of Science and Humanities(RCSH) is a government approved self financing college to the University of Calicut. It started functioning in 2004 and located at campus named ‘Harithagiri’, half a kilometer of the Areakode-Kondoty highway from Mundamparamba ‘schoolpadi’ in the north-east direction. Harithagiri is a valley surrounded by thickly vegetated green hills with a serene and salubrious ambience ideally suited for peaceful teaching and learning exercise with undisturbed natural tranquility.</string>
    <string name="pacioli_intro">PACIOLI GURUKUL is now one of the leading institution in Malappuram for CA,CMA,ACCA and CS.And the institution also provides tution for +2 Commerce students.And PACIOLI is now one of the leading institution in Kerala with high pass percentage in CA Inter (formerly IPCC) with above 60% .We are well equipped with our faculty pool,modernized classes with high quality infrastructure.We also provide problem solving section by conducting exams and providing assignments after class on everyday to improve presentation skill and reduce the problem lack of practice before exam.
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_home">homeActivity</string>
    <string name="srs_logo">SRS_logo</string>
    <string name="srs_technologies">SRS technologies</string>
    <string name="srstechnologies_info">srstechnologies.info</string>
    <string name="welcome">Welcome.. Have a nice day..</string>
    <string name="T_Buddy">t_buddy</string>
    <string name="title_activity_p_home">Parent Home</string>
    <string name="s_pro_pic">s_pro_pic</string>
    <string name="Name">Name</string>
    <string name="dob">DOB</string>
    <string name="go_to">Go To:</string>
    <string name="t_buddy_operations">T_Buddy Operations:</string>
    <string name="class_batch">Class:</string>
    <string name="title_activity_t_home">T_homeActivity</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To date</string>
    <string name="go">Go</string>
    <string name="login">Login</string>
    <string name="title_activity_login1">Login</string>
    <string name="password">Password</string>
    <string name="tv_developer">SRS Technologies</string>
    <string name="visit_us">www.srstechnologies.info</string>
    <string name="mail_us"> mail@srstechnologies.info \nsupport@srstechnologies.info</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="seat">seat</string>
    <string name="course">course</string>
    <string name="course_id">course_id</string>
    <string name="hdr_examid">ExamID</string>
    <string name="hdr_exam">Exam</string>
    <string name="notice">Notice</string>
</resources>