<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="8"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/course_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/course_id"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/seat"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/seat"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/status"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/status"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="5"
        android:text="@string/course"
        android:textColor="@color/white"/>
</LinearLayout>
