<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="5"
    android:padding="15dp"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_exam_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/hdr_examid"
        android:textSize="12sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_exam_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/hdr_exam"
        android:textSize="12sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_exam_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/date"
        android:textSize="12sp"
        android:textColor="@color/black" />

</LinearLayout>
