<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/profile_back2"
    tools:context="in.example.attendance.Contact_Us">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4ca78e4a"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/srs_logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tv_developer"
            android:textColor="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:contentDescription="@string/srs_logo"
            app:srcCompat="@drawable/ic_mail24_white" />
        <TextView
            android:id="@+id/mail_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:text="@string/mail_us" />
</LinearLayout>
    <TableRow android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/lightgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/visit_icon"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/srs_logo"
            app:srcCompat="@drawable/ic_visit_white" />
        <TextView
            android:id="@+id/visit_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:text="@string/visit_us" />
    </LinearLayout>
    <TableRow android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/lightgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/call_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:contentDescription="@string/srs_logo"
            app:srcCompat="@drawable/ic_call_white" />
        <TextView
            android:id="@+id/call_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:text="+91 4832 854 500\n+91 9605 131 100" />
    </LinearLayout>
    <TableRow android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/lightgray"/>
    </LinearLayout>

</LinearLayout>
